# wine_quality

./: .gitignore  README.md  pyproject.toml
src/wine_quality/: analyze_data.py  download_data.py  run_analysis.py
