[tool.poetry]
name = "wine_quality"
version = "0.1.0"
description = "Wine Quality Dataset Analysis"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
japanize-matplotlib = "^1.1.3"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
